# test-frmwork

./: README.md  pyproject.toml
config/: mappings.xls
framework/: __init__.py  assertions.py  expectation_builder.py  mapping_loader.py  models.py  oracle_client.py  pipeline_trigger.py  transformations.py  xml_reader.py
testdata/xml/: customer_insert.xml  customer_upsert.xml
tests/: test_assertions.py  test_e2e_template.py  test_expectation_builder.py  test_mapping_loader.py  test_sample_assets.py
tests/features/: mapping_assertions.feature
tests/steps/: test_mapping_bdd.py
